--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,23 @@
 {
-  "name": "帰宅前チェックリスト",
+  "name": "勤務別帰宅前チェックアプリ",
   "short_name": "帰宅チェック",
-  "description": "勤務形態に合わせた帰宅前確認アプリ",
+  "description": "勤務形態に合わせた帰宅前の最終確認チェックリスト",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f4f7f6",
   "theme_color": "#007bff",
+  "lang": "ja",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
